--- a/assets/main.css
+++ b/assets/main.css
@@ -5,9 +5,21 @@ body {
 .side-menu {
   position: absolute;
   top: 0;
-  left: 0px;
+  left: -300px;
   width: 300px;
   height: 100vh;
   background-color: blue;
   transition: all 0.4s ease-out;
+}
+
+.side-open {
+  left: 0;
+}
+
+.side-menu > #togle-btn {
+  color: black;
+  text-decoration: none;
+  position: absolute;
+  margin-top: 20px;
+  right: -40
 }
