--- a/assets/main.css
+++ b/assets/main.css
@@ -8,7 +8,7 @@ body {
   left: -300px;
   width: 300px;
   height: 100vh;
-  background-color: blue;
+  background-color: #E67E22;
   transition: all 0.4s ease-out;
 }
 
@@ -16,10 +16,47 @@ body {
   left: 0;
 }
 
-.side-menu > #togle-btn {
+.side-menu #togle-btn {
   color: black;
   text-decoration: none;
   position: absolute;
   margin-top: 20px;
   right: -40
+}
+
+.nav-wrapper {
+  padding: 0px 15px;
+}
+
+.nav-title {
+  color: #ECF0F1;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 30px;
+}
+
+.nav-items {
+  padding: 0;
+  list-style-type: none;
+}
+
+.nav-items li{
+  list-style: none;
+  color: #ECF0F1;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  padding: 12px 10px;
+  border-radius: 3px;
+  transition: all 0.5s;
+}
+
+.nav-items li:hover {
+  background-color: #EB984E;
+}
+
+.nav-active {
+  background-color: #AF601A;
+}
+
+.nav-icon {
+  margin: 0 10px;
 }
