--- a/assets/main.css
+++ b/assets/main.css
@@ -6,11 +6,13 @@ body {
 .side-menu {
   position: absolute;
   top: 0;
+  bottom: 0;
   left: -300px;
   width: 300px;
   height: 100vh;
   background-color: #E67E22;
   transition: all 0.4s ease-out;
+  overflow-y: scroll;
 }
 
 .general-wrapper {
@@ -88,6 +90,7 @@ a {
 .nav-items {
   padding: 0;
   list-style-type: none;
+  overflow: scroll;
 }
 
 .nav-items li{
